# routes/users.go
@@ -30,5 +30,8 @@ func UsersRoutes(r *gin.Engine) {
 		userRoutes.GET("/profile", users.GetUserProfile)
 		userRoutes.GET("/:username", users.GetUserByUsername)
 		userRoutes.POST(":id/follow", users.FollowUser)
+		userRoutes.DELETE(":id/follow", users.UnfollowUser)
+		userRoutes.GET("/followings", users.GetMyFollowings)
+		userRoutes.GET("/followers", users.GetMyFollowers)
 	}
 }
